--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,6 +40,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/contact, roles: PUBLIC_ACCESS }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/inscription, roles: PUBLIC_ACCESS }
         - { path: ^/webhook/stripe, roles: PUBLIC_ACCESS }
