--- a/.github/workflows/run-messenger.yml
+++ b/.github/workflows/run-messenger.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Run messenger:consume
         run: |
-          sshpass -p "${{ secrets.OVH_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no -o PubkeyAuthentication=no -v -T ssh://${{ secrets.OVH_SSH_USER }}@${{ secrets.OVH_SSH_HOST }}:22 "cd /home/eccemiz/api && /usr/local/php8.2/bin/php /home/eccemiz/api/bin/console messenger:consume async --no-debug -vv"
+          timeout 300 sshpass -p "${{ secrets.OVH_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no -o PubkeyAuthentication=no -v -T ssh://${{ secrets.OVH_SSH_USER }}@${{ secrets.OVH_SSH_HOST }}:22 "cd /home/eccemiz/api && /usr/local/php8.2/bin/php /home/eccemiz/api/bin/console messenger:consume async --no-debug -vv"
